--- a/config/module.ini
+++ b/config/module.ini
@@ -5,7 +5,7 @@ name = "Activity Log"
 description = "Monitor user activity"
 author = "Omeka Team"
 author_link = "https://omeka.org/"
-configurable = false
+configurable = true
 ;module_link = "https://omeka.org/s/docs/user-manual/modules/activitylog/"
 ;dev_link = "https://omeka.org/s/docs/developer/module_docs/ActivityLog/"
 support_link = "https://forum.omeka.org/c/omeka-s/modules"
