--- a/config/module.ini
+++ b/config/module.ini
@@ -1,5 +1,5 @@
 [info]
-version = "1.0.0-alpha"
+version = "1.0.0"
 omeka_version_constraint = "^4.0.0"
 name = "Activity Log"
 description = "Monitor user activity"
